definately with the tempest

--- a/cookbooks/devstack/templates/default/devstack/local.conf.erb
+++ b/cookbooks/devstack/templates/default/devstack/local.conf.erb
@@ -6,4 +6,4 @@ SERVICE_PASSWORD=$ADMIN_PASSWORD
 SWIFT_HASH=$ADMIN_PASSWORD
 HOST_IP=<%= @host_ip %>
 disable_all_services
-enable_service key mysql s-proxy s-object s-container s-account
+enable_service tempest key mysql s-proxy s-object s-container s-account
