new devstack systemd stuff is baller

--- a/cookbooks/devstack/templates/default/devstack/local.conf.erb
+++ b/cookbooks/devstack/templates/default/devstack/local.conf.erb
@@ -1,4 +1,6 @@
 [[local|localrc]]
+USE_SYSTEMD=True
+KEYSTONE_DEPLOY=uwsgi
 ADMIN_PASSWORD=secret
 DATABASE_PASSWORD=$ADMIN_PASSWORD
 RABBIT_PASSWORD=$ADMIN_PASSWORD
